Updated EventDetailActivity and activity_event_detail layout with collapsing toolbar containing event image and action icons.  Created landscape layout of activity_event_detail.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,20 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activities.EventDetailActivity">
-        </activity>
+
         <activity android:name=".ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.activities.EventDetailActivity"
+                  android:parentActivityName=".ui.activities.EventDetailActivity"
+                  android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".ui.activities.EventDetailActivity"/>
         </activity>
     </application>
 
