--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,13 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:exifinterface:27.1.1'
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'org.mockito:mockito-core:2.8.47'
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    androidTestImplementation "org.mockito:mockito-android:2.8.47"
 
     // RetroFit components
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -43,6 +48,7 @@ dependencies {
     // Lifecycle components
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
     kapt "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
+    testImplementation "android.arch.core:core-testing:1.1.1"
 
     // Room components
     implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
