--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'org.mockito:mockito-core:2.19.0'
+    androidTestImplementation 'org.mockito:mockito-core:2.21.0'
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation "com.nhaarman:mockito-kotlin:1.5.0"
-    androidTestImplementation "org.mockito:mockito-android:2.8.47"
+    androidTestImplementation "org.mockito:mockito-android:2.21.0"
 
     // RetroFit components
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -56,4 +56,7 @@ dependencies {
 
     // Glide components
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
