--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        String sharedDirectory = 'src/testShared/java'
+        test {
+            test.java.srcDirs += sharedDirectory
+        }
+        androidTest {
+            androidTest.java.srcDirs += sharedDirectory
+        }
+    }
 }
 
 dependencies {
@@ -37,15 +46,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'org.mockito:mockito-core:2.8.47'
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
-    androidTestImplementation "com.nhaarman:mockito-kotlin:1.5.0"
-    androidTestImplementation "org.mockito:mockito-android:2.8.47"
 
     // Mockito
-    androidTestImplementation 'org.mockito:mockito-core:2.25.0'
-    androidTestImplementation "android.arch.core:core-testing:1.1.1"
-    androidTestImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation "org.mockito:mockito-android:2.25.0"
 
     // RetroFit components
@@ -68,7 +72,7 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // RxJava, RxAndroid
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
 }
