Renamed Event and EventExtensions to StarWarsEvent and StarWarsEventExtension

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
                     android:value=".view.activities.EventDetailActivity"/>
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
-                <data android:mimeType="vnd.android.cursor.dir/event" />
+                <data android:mimeType="vnd.android.cursor.dir/starwarsevent"
+                        tools:ignore="AppLinkUrlError" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
