--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:label="@string/app_name"
             android:networkSecurityConfig="@xml/network_security_config"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="GoogleAppIndexingWarning" tools:targetApi="n">
 
         <activity android:name=".view.activities.MainActivity">
