--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,35 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext {
-        kotlin_version = '1.3.50'
-        archLifecycleVersion = '1.1.1'
-        roomVersion = '1.1.1'
-    }
+    ext.versions = [
+        gradle              : '3.5.3',
+        kotlin              : '1.3.50',
+        androidx            : '1.1.0',
+        androidx_testing    : '1.2.0',
+        constraint_layout   : '1.1.3',
+        material            : '1.1.0-rc02',
+        cardview            : '1.0.0',
+        lifecycle           : '2.2.0',
+        lifecycle_testing   : '2.1.0',
+        room                : '2.2.4',
+        mockito             : '2.25.0',
+        mockito_kotlin      : '2.1.0',
+        coroutines          : '1.3.3',
+        junit               : '4.12',
+        timber              : '4.7.1',
+        glide               : '4.9.0',
+        retrofit            : '2.6.1',
+        gson_converter      : '2.3.0',
+        espresso            : '3.2.0'
+    ]
 
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$versions.gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,7 +39,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
