--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.glopez.phunapp"
         minSdkVersion 21
         //noinspection OldTargetApi
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -32,19 +32,28 @@ android {
             androidTest.java.srcDirs += sharedDirectory
         }
     }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-//    packagingOptions {
-//        pickFirst 'META-INF/*'
-//    }
+
+    packagingOptions {
+        pickFirst 'META-INF/*'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
     implementation "androidx.appcompat:appcompat:$versions.andriodx"
+    implementation "androidx.core:core-ktx:$versions.andriodx"
+    implementation "androidx.fragment:fragment-ktx:$versions.fragmentX"
+//    implementation "androidx.activity:activity-ktx:$versions.fragmentX"
     implementation "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
     implementation "com.google.android.material:material:$versions.material"
     implementation "androidx.cardview:cardview:$versions.cardview"
@@ -53,6 +62,9 @@ dependencies {
 
     // Testing
     testImplementation "junit:junit:$versions.junit"
+    testImplementation "androidx.test.ext:junit:1.1.1"
+    androidTestImplementation "androidx.test.ext:junit:1.1.1"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "androidx.test:rules:$versions.androidx_testing"
     androidTestImplementation "androidx.test:runner:$versions.androidx_testing"
 
@@ -80,6 +92,7 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:$versions.room"
+    androidTestImplementation project(path: ':app')
     kapt "androidx.room:room-compiler:$versions.room"
     implementation "androidx.room:room-ktx:$versions.room"
 
@@ -96,5 +109,9 @@ dependencies {
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutines"
     
     // Leak Canary
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$versions.leakCanary"
+
+    // Dagger
+    implementation "com.google.dagger:dagger:$versions.dagger"
+    kapt "com.google.dagger:dagger-compiler:$versions.dagger"
 }
