--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.versions = [
-            gradle           : '3.6.2',
+            gradle           : '7.0.4',
             kotlin           : '1.3.61',
             androidx         : '1.1.0',
             androidx_testing : '1.2.0',
@@ -19,7 +19,10 @@ buildscript {
             glide               : '4.9.0',
             retrofit            : '2.7.2',
             gson_converter      : '2.3.0',
-            espresso            : '3.2.0'
+            espresso            : '3.2.0',
+            leakCanary          : '2.4',
+            dagger              : '2.31',
+            fragmentX           : '1.2.1'
     ]
 
     repositories {
